# nlql

./: .envrc  .gitignore  .lazy.lua  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  integration.yml
nix/: pg_down.nix  pg_status.nix  pg_up.nix  shell.nix
pg/: env.nix  pg_log.nix
src/: ai.rs  cli.rs  db.rs  error.rs  lib.rs  main.rs  output.rs  safety.rs  server.rs
src/core/: ai.rs  db.rs  mod.rs  safety.rs
src/tui/: app.rs  ascii.rs  event.rs  mod.rs  theme.rs  ui.rs
tests/: db_tests.rs  safety_tests.rs
