[package]
name = "nlql"
version = "0.1.0"
edition = "2024"
description = "Natural Language to SQL using Claude AI"

[features]
default = []
test-db = []

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite", "mysql"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4.5.58", features = ["derive", "env"] }

# tui
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
terminal-light = "1.4"

